style (ProductThumbnails) apply correct margin and covering

--- a/src/pages/Store/Product/ProductImage.scss
+++ b/src/pages/Store/Product/ProductImage.scss
@@ -7,6 +7,7 @@
     position: relative;
     & > img {
       height: 462px;
+      padding: 44px 48px 0 48px;
       width: 462px;
     }
   }
@@ -31,8 +32,8 @@
   .zoom {
     svg {
       height: 17px;
-      left: 3px;
       position: relative;
+      right: 3px;
       top: 3px;
       width: 17px;
     }
